apps/jellyseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  selector:
    app.kubernetes.io/name: jellyseerr
  ports:
    - name: http
      port: 5055
      targetPort: http
