apps/jellyseerr/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: jellyseerr
  hostnames:
    - jellyseerr.tomerhanochi.com
  rules:
    - backendRefs:
        - name: jellyseerr
          port: 5055
